--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -33,7 +33,7 @@
         </td>
         <td>
           <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST">
-            <button type="submit" class="btn trash"><i class="fas fa-trash-alt"></i></button>
+            <button type="submit" class="btn admin-trash"><i class="fas fa-trash-alt"></i></button>
           </form>
         </td>
       </tr>
