--- a/views/admin/categories.hbs
+++ b/views/admin/categories.hbs
@@ -36,7 +36,7 @@
         </td>
         <td>
           <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
-            <button type="submit" class="btn trash"><i class="fas fa-trash-alt"></i></button>
+            <button type="submit" class="btn admin-trash"><i class="fas fa-trash-alt"></i></button>
           </form>
         </td>
       </tr>
