--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -1,4 +1,6 @@
+<div class="alert-page">
 {{> alert}}
+</div>
 
 <div class="row products-page">
 {{#each FavoritedProducts}}
@@ -9,20 +11,45 @@
         <h5 class="card-title">{{this.name}}</h5>
         <p class="card-text">${{this.price}}</p>
       </div>
+    </a>
       <div class="card-footer">
-        <form action="/cart/{{this.id}}" method="POST" class="cart">
-        <input type="hidden" name="num" value="1">
-          <input type="hidden" name="productId" value="{{this.id}}">
+        <form action="/cart/{{this.id}}" method="POST" class="favorite">
+          <input type="hidden" name="num" value="1">
           <button type="submit" class="btn btn-secondary">Add To Cart</button>
         </form>
-        <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" class="cart">
-          <button type="submit" class="btn btn-secondary">
-            <i class="fas fa-times"></i> 
+        
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#f{{this.id}}">
+          <i class="fas fa-times"></i> 
+        </button>
+      </div>
+    
+  </div>
+
+  <!-- remove modal -->
+  <div class="modal fade" id="f{{this.id}}" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Remove form the wishlist</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Are you sure if you want to remove it from the wishlist?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" class="favorite">
+          <button type="submit" class="btn btn-primary">
+            Yes
           </button>
         </form>
+        </div>
       </div>
-    </a>
+    </div>
   </div>
+
 {{/each}}
 </div>
 
@@ -48,4 +75,7 @@
 	
 <!-- cart modal at right side -->
 {{> rightCart}}
+
+
+
 	
