--- a/views/product.hbs
+++ b/views/product.hbs
@@ -20,17 +20,14 @@
           <button id="cart" type="submit" class="btn btn-secondary">Add To Cart</button>
         </form>
         {{#if product.FavoritedUsers}}
-        <form action="/favorite/{{product.id}}?_method=DELETE" method="POST" class="unfavorite-btn" id="wishlist">
-          <button class="btn btn-secondary">
-            <input type="hidden" class="product-id" value="{{product.id}}">
+        <form action="/favorite/{{product.id}}?_method=DELETE" method="POST" class="unfavorite-btn">
+          <button type="submit" class="btn btn-secondary">
             <i class="fas fa-heart fa-lg"></i> Already At Wishlist
           </button>
         </form>
         {{else}}
-        <form action="/favorite" method="POST" class="favorite-btn" id="wishlist">
-          <button class="btn btn-secondary">
-            <input type="hidden" class="product-id" value="{{product.id}}">
-            <input type="hidden" class="user-id" value="{{user.id}}">
+        <form action="/favorite/{{product.id}}" method="POST" class="favorite-btn">
+          <button type="submit" class="btn btn-secondary">
             <i class="far fa-heart fa-lg"></i> Add To Wishlist  
           </button>
         </form>
