--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -3,7 +3,7 @@
 
   <form action="/admin/orders/{{order.id}}?_method=PUT" method="POST">
     <div class="list-information">
-      <a href="/admin/orders" type="button" class="btn btn-outline-secondary custom-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
+      <a href="/admin/orders" type="button" class="btn btn-outline-secondary order-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
 
       <ul class="list-group">
         <li class="list-group-item list-group-item-secondary">
