--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -23,7 +23,7 @@
     </div>
     <div class="form-group">
       {{#if newProduct}}
-      <img id="image" src="{{product.image}}">
+      <img id="image" src="{{product.image}}" style="width: 300px;">
       {{else}}
       <img id="image" src="{{product.image}}" class="admin-product-card">
       {{/if}}
