--- a/views/order.hbs
+++ b/views/order.hbs
@@ -1,4 +1,6 @@
 <div class="container">
+  {{>alert}}
+  
   <div class="list-information">
     <a href="/orders" type="button" class="btn btn-outline-secondary order-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
 
