--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -32,12 +32,37 @@
           <a href="/admin/products/{{this.id}}" class="edit-btn">Edit</a>
         </td>
         <td>
-          <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST">
-            <button type="submit" class="btn admin-trash"><i class="fas fa-trash-alt"></i></button>
-          </form>
+          <button type="button" class="btn admin-trash" data-toggle="modal" data-target="#p{{this.id}}">
+            <i class="fas fa-trash-alt"></i>
+          </button>
+          
         </td>
       </tr>
+      <!-- remove product modal -->
+      <div class="modal fade" id="p{{this.id}}" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Delete the product</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Are you sure if you want to delete this product?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <form action="/admin/products/{{this.id}}?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-primary">Yes</button>
+              </form>
+            </div>
+          </div>
+        </div>
       {{/each}}
     </tbody>
   </table>
 </div>
+
+
+
