--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -47,7 +47,10 @@
             <i class="fas fa-user fa-lg"></i>
           </button>
           <div class="dropdown-menu dropdown-menu-right">
+            {{#ifEquals user.role 'admin'}}
+            {{else}}
             <a class="dropdown-item" href="/orders">Order Tracking</a>
+            {{/ifEquals}}
             <a class="dropdown-item" href="/user/account">Account</a>
             {{#if isAuthenticated}}
             <form action="/user/logout" method="POST">
@@ -57,6 +60,8 @@
           </div>
         </div>
       </div>
+      {{#ifEquals user.role 'admin'}}
+      {{else}}
       <div class="nav-item">
         <a class="dropdown-item nav-btn" href="/favorite">
           <i class="far fa-heart fa-lg"></i>   
@@ -67,6 +72,7 @@
           <i class="fas fa-shopping-cart fa-lg"></i>   
         </button>
       </div>
+      {{/ifEquals}}
     </nav>    
   </nav>
   
