--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -30,7 +30,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Remove form the wishlist</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Remove From The Wishlist</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
