--- a/views/admin/categories.hbs
+++ b/views/admin/categories.hbs
@@ -35,11 +35,34 @@
           <a href="/admin/categories/{{this.id}}" class="edit-btn">Edit</a>
         </td>
         <td>
-          <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
-            <button type="submit" class="btn admin-trash"><i class="fas fa-trash-alt"></i></button>
-          </form>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn admin-trash" data-toggle="modal" data-target="#c{{this.id}}">
+            <i class="fas fa-trash-alt"></i>
+          </button>
         </td>
       </tr>
+      <!-- Delete Category Modal -->
+      <div class="modal fade" id="c{{this.id}}" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Delete The Category</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Are you sure if you want to delete this category?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-primary">Yes</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
       {{/each}}
     </tbody>
   </table>
