--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -32,13 +32,14 @@
           <a href="/admin/products/{{this.id}}" class="edit-btn">Edit</a>
         </td>
         <td>
+          <!-- Button trigger modal -->
           <button type="button" class="btn admin-trash" data-toggle="modal" data-target="#p{{this.id}}">
             <i class="fas fa-trash-alt"></i>
           </button>
           
         </td>
       </tr>
-      <!-- remove product modal -->
+      <!-- Delete Product Modal -->
       <div class="modal fade" id="p{{this.id}}" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
