--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -17,15 +17,13 @@
           <input type="hidden" name="num" value="1">
           <button type="submit" class="btn btn-secondary">Add To Cart</button>
         </form>
-        
+        <!-- Button trigger modal -->
         <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#f{{this.id}}">
           <i class="fas fa-times"></i> 
         </button>
       </div>
-    
   </div>
-
-  <!-- remove modal -->
+  <!-- Remove Favorite Modal -->
   <div class="modal fade" id="f{{this.id}}" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -49,7 +47,6 @@
       </div>
     </div>
   </div>
-
 {{/each}}
 </div>
 
