--- a/views/order.hbs
+++ b/views/order.hbs
@@ -111,21 +111,20 @@
 
   <div class="clearfix"></div>
 
-  
-  {{#ifEquals order.payment_status 0}}
-  <form name="Newebpay" action="{{../tradeInfo.PayGateWay}}" method="POST" class="payment">
-    <input type="hidden" name="MerchantID" value="{{../tradeInfo.MerchantID}}">
-    <input type="hidden" name="TradeInfo" value="{{../tradeInfo.TradeInfo}}">
-    <input type="hidden" name="TradeSha" value="{{../tradeInfo.TradeSha}}">
-    <input type="hidden" name="Version" value="{{../tradeInfo.Version}}">
-    <input type="hidden" name="MerchantOrderNo" value="{{../tradeInfo.MerchantOrderNo}}">
-    <button type="submit" class="btn btn-secondary custom-btn beside-btn">Confirm Payment</button>
-  </form>
-  {{/ifEquals}}
-  {{#ifEquals order.shipping_status -2}}
-  {{else}}
-     <!-- Button trigger modal -->
   <center>
+    {{#ifEquals order.payment_status 0}}
+    <form name="Newebpay" action="{{../tradeInfo.PayGateWay}}" method="POST" class="payment">
+      <input type="hidden" name="MerchantID" value="{{../tradeInfo.MerchantID}}">
+      <input type="hidden" name="TradeInfo" value="{{../tradeInfo.TradeInfo}}">
+      <input type="hidden" name="TradeSha" value="{{../tradeInfo.TradeSha}}">
+      <input type="hidden" name="Version" value="{{../tradeInfo.Version}}">
+      <input type="hidden" name="MerchantOrderNo" value="{{../tradeInfo.MerchantOrderNo}}">
+      <button type="submit" class="btn btn-secondary custom-btn beside-btn">Confirm Payment</button>
+    </form>
+    {{/ifEquals}}
+    {{#ifEquals order.shipping_status -2}}
+    {{else}}
+     <!-- Button trigger modal -->
     <button type="button" class="btn btn-secondary custom-btn beside-btn" data-toggle="modal" data-target="#c{{order.id}}">
       Cancel Order
     </button>
@@ -141,7 +140,7 @@
           </button>
         </div>
         <div class="modal-body">
-          Are you sure if you want to cancel the order?
+          Are you sure if you want to cancel this order?
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -153,8 +152,6 @@
     </div>
   </div>
   {{/ifEquals}}
-
- 
 
   <!-- cart modal at right side -->
   {{> rightCart}}
