--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,11 +28,6 @@
       </div>
     </div>
     <nav class="nav-links">
-      {{#ifEquals user.role 'admin'}}
-      <div class="nav-item">
-        <a href="/admin/products" class="btn">Backstage</a>
-      </div>
-      {{/ifEquals}}
       {{#if isAuthenticated}}
       {{else}}
       <div class="nav-item">
@@ -46,7 +41,7 @@
           <button class="btn dropdown-title" data-toggle="dropdown">
             <i class="fas fa-user fa-lg"></i>
           </button>
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-menu">
             {{#ifEquals user.role 'admin'}}
             {{else}}
             <a class="dropdown-item" href="/orders">Order Tracking</a>
@@ -61,6 +56,9 @@
         </div>
       </div>
       {{#ifEquals user.role 'admin'}}
+      <div class="nav-item">
+        <a href="/admin/products" class="btn">Backstage</a>
+      </div>
       {{else}}
       <div class="nav-item">
         <a class="dropdown-item nav-btn" href="/favorite">
@@ -76,10 +74,8 @@
     </nav>    
   </nav>
   
-    {{{body}}}
-  
-  
- 
+  {{{body}}}
+
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
