--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -23,9 +23,9 @@
             </p>
             <div class="right-add-min-button">  
               <input type="hidden" name="productId" value="{{this.id}}">
-              <button onclick="cart(this)" class="cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
-              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="cart-btn">
-              <button onclick="cart(this)" class="cart-btn" value="plus"><i class="fas fa-plus icon"></i></button>
+              <button onclick="cart(this)" class="right-cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
+              <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="right-cart-btn">
+              <button onclick="cart(this)" class="right-cart-btn" value="plus"><i class="fas fa-plus icon"></i></button>
             </div>
             <input type="hidden" name="cartItemId" id="cart-item-id" value="{{this.cartItemId}}">
             <div>  
