Update trash position for rwd

--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -13,10 +13,10 @@
         {{/if}}
         {{#each items}}
         <div class="row right-item">
-          <div class="col-7">
+          <div class="col-6 col-sm-7">
             <img class="card-img-top" src="{{this.image}}" alt="cartItem photo">
           </div>
-          <div class="col-5">
+          <div class="col-6 col-sm-5">
             <h6>{{this.name}}</h6>
             <p>
               $<span>{{this.price}}</span>
