fix the bug of post order

--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -64,19 +64,11 @@
             <tr>
               <th scope="row">Payment Date</th>
               <td>
-                {{!-- <input type="hidden" name="paymentId" value="payment.id"> --}}
                 {{#if payment}}
-                  {{DateTime ../payment.paid_at}}
+                  {{DateTime payment.paid_at}}
                 {{else}}
-                  <input type="datetime-local" name="paid_at" value="{{DateTime ../payment.paid_at}}" class="form-control">
-                {{/if}}
-                {{#ifEquals payment.paid_at null}}
-                  <input type="datetime-local" name="paid_at" value="{{DateTime ../payment.paid_at}}" class="form-control">
-                  
-                {{else}}
-                  {{DateTime ../payment.paid_at}}
-                {{/ifEquals}}
-                
+                  <input type="datetime-local" name="paid_at" value="{{DateTime payment.paid_at}}" class="form-control">
+                {{/if}}                
               </td>
             </tr>
           </table>
