--- a/views/check.hbs
+++ b/views/check.hbs
@@ -74,6 +74,7 @@
 
     <center>
       <a type="button" href="javascript:history.back()" class="btn btn-secondary custom-btn beside-btn">Previous</a>
+      <input type="hidden" name="amount" value="{{totalPrice}}">
       <input type="hidden" name="cartId" value="{{cart.dataValues.id}}">
       <button type="submit" class="btn btn-secondary custom-btn beside-btn">Check Out</button>
     </center>
