--- a/views/order.hbs
+++ b/views/order.hbs
@@ -144,7 +144,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="/order/{{../order.id}}/cancel" method="POST" class="payment">
+          <form action="/order/{{../order.id}}?_method=DELETE" method="POST" class="payment">
             <button type="submit" class="btn btn-primary">Yes</button>
           </form>
         </div>
