update router and README

--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -39,7 +39,7 @@
           {{#ifEquals this.payment_status 1}}Paid{{/ifEquals}}
         </td>
         <td>
-          <a href="/admin/orders/{{this.id}}" class="edit-btn">Edit</a>
+          <a href="/admin/order/{{this.id}}" class="edit-btn">Edit</a>
         </td>
       </tr>
       {{/each}}
