--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   {{>alert}}
 
-  <form action="/admin/orders/{{order.id}}?_method=PUT" method="POST">
+  <form action="/admin/order/{{order.id}}?_method=PUT" method="POST">
     <div class="list-information">
       <a href="/admin/orders" type="button" class="btn btn-outline-secondary order-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
 
