--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -21,7 +21,7 @@
         <td>#{{this.id}}</td>
         <td>{{Date this.createdAt}}</td>
         <td>
-          {{#ifEquals this.shipping_status -2}}Order Cancelled{{/ifEquals}}
+          {{#ifEquals this.shipping_status -2}}Order cancelled{{/ifEquals}}
           {{#ifEquals this.shipping_status -1}}Preparing{{/ifEquals}}
           {{#ifEquals this.shipping_status 0}}Shipping{{/ifEquals}}
           {{#ifEquals this.shipping_status 1}}Arrived{{/ifEquals}}
@@ -33,9 +33,9 @@
           {{#ifEquals this.payment.dataValues.payment_method 'Barcode'}}Super business barcode payment{{/ifEquals}}
         </td>
         <td>
-          {{#ifEquals this.payment_status -2}}Refund Completed{{/ifEquals}}
-          {{#ifEquals this.payment_status -1}}Request Refund{{/ifEquals}}
-          {{#ifEquals this.payment_status -0}}Not Paid{{/ifEquals}}
+          {{#ifEquals this.payment_status -2}}Refund completed{{/ifEquals}}
+          {{#ifEquals this.payment_status -1}}Request refund{{/ifEquals}}
+          {{#ifEquals this.payment_status -0}}Not paid{{/ifEquals}}
           {{#ifEquals this.payment_status 1}}Paid{{/ifEquals}}
         </td>
         <td>
