--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -19,7 +19,7 @@
           </td>
           <td>{{Date this.createdAt}}</td>
           <td>
-            {{#ifEquals this.shipping_status -2}}Order Cancelled{{/ifEquals}}
+            {{#ifEquals this.shipping_status -2}}Order cancelled{{/ifEquals}}
             {{#ifEquals this.shipping_status -1}}Preparing{{/ifEquals}}
             {{#ifEquals this.shipping_status 0}}Shipping{{/ifEquals}}
             {{#ifEquals this.shipping_status 1}}Arrived{{/ifEquals}}
@@ -32,9 +32,9 @@
             {{#ifEquals this.payment.dataValues.payment_method 'Barcode'}}Super business barcode payment{{/ifEquals}}
           </td>
           <td>
-            {{#ifEquals this.payment_status -2}}Refund Completed{{/ifEquals}}
-            {{#ifEquals this.payment_status -1}}Request Refund{{/ifEquals}}
-            {{#ifEquals this.payment_status -0}}Not Paid{{/ifEquals}}
+            {{#ifEquals this.payment_status -2}}Refund completed{{/ifEquals}}
+            {{#ifEquals this.payment_status -1}}Request refund{{/ifEquals}}
+            {{#ifEquals this.payment_status -0}}Not paid{{/ifEquals}}
             {{#ifEquals this.payment_status 1}}Paid{{/ifEquals}}
           </td>
         </tr>    
