Return back to original page after authentication

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -59,7 +59,7 @@
     {{#if noItems}}
     <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/product">Keep Shopping</a>
     {{else}}
-    <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/cart/check">Next</a>
+    <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/cart/check?redirect=check">Next</a>
     {{/if}}
   </center>
 
