--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -16,6 +16,7 @@
       </div>
       {{>alert}}
       <center>
+        <input type="hidden" name="redirect" value="{{redirect}}">
         <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
       </center>
     </form>
