Add sharp for resize image

--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -25,7 +25,7 @@
       {{#if newProduct}}
       <img id="image" src="{{product.image}}" style="width: 300px;">
       {{else}}
-      <img id="image" src="{{product.image}}" class="admin-product-card">
+      <img id="image" src="{{product.image}}" style="width: 300px; margin-right: 10px;">
       {{/if}}
       <div class="picture">
         <label for="file">Upload Picture</label>
