--- a/views/product.hbs
+++ b/views/product.hbs
@@ -12,23 +12,23 @@
         <p>{{product.description}}</p>
         {{#ifEquals user.role 'admin'}}
         {{else}}
-        <form action="/cart/{{product.id}}" method="POST">
+        <form action="/cart/{{../product.id}}" method="POST">
           <div class="add-min-button">
             <button type="button" id="min" class="cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
             <input id="num" name="num" value="1" readonly="true" class="cart-btn">
             <button type="button" id="plus" class="cart-btn" value="plus"><i class="fas fa-plus icon"></i></button>
           </div>
-          <input type="hidden" id="productId" name="productId" value="{{product.id}}">
+          <input type="hidden" id="productId" name="productId" value="{{../product.id}}">
           <button id="cart" type="submit" class="btn btn-secondary">Add To Cart</button>
         </form>
         {{#if product.FavoritedUsers}}
-        <form action="/favorite/{{product.id}}?_method=DELETE" method="POST" class="unfavorite-btn">
+        <form action="/favorite/{{../product.id}}?_method=DELETE" method="POST" class="unfavorite-btn">
           <button type="submit" class="btn btn-secondary">
             <i class="fas fa-heart fa-lg"></i> Already At Wishlist
           </button>
         </form>
         {{else}}
-        <form action="/favorite/{{product.id}}" method="POST" class="favorite-btn">
+        <form action="/favorite/{{../product.id}}" method="POST" class="favorite-btn">
           <button type="submit" class="btn btn-secondary">
             <i class="far fa-heart fa-lg"></i> Add To Wishlist  
           </button>
