Fix cart jquery bug

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -25,7 +25,7 @@
             <td>
               $<span>{{this.price}}</span>
             </td>
-            <td>
+            <td class="subTotalQty">
               <input type="hidden" name="productId" value="{{this.id}}">
               <button onclick="cart(this)" class="cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
               <input id="num" name="num" value="{{this.quantity}}" readonly="true" class="cart-btn">
