Update category by using ajax to reduce repetition

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -57,12 +57,11 @@
 
   <center>
     {{#if noItems}}
-    <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/product">Keep Shopping</a>
+    <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/">Keep Shopping</a>
     {{else}}
     <a type="button" class="btn btn-secondary custom-btn beside-btn" href="/cart/check?redirect=check">Next</a>
     {{/if}}
   </center>
-
 </div>
 
-<script src="/ajax.js"></script>
+<script src="/rightCart.js"></script>
