--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -5,9 +5,9 @@
         <h4 class="modal-title" id="myModalLabel2">Cart</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
-      <div class="modal-body" id="cart-body">
+      <div class="modal-body" id="cartBody">
       </div>
-      <div class="modal-footer" id="cart-footer">
+      <div class="modal-footer" id="cartFooter">
       </div>
     </div>
   </div>
